Validated schema naming rules and refactored `CopySchema` to simplify MySQL command construction. Added corresponding unit tests.